Set parent widget for input dialogs

This is needed to establish the proper transient parent relationship on Wayland

BUG: 496390